fixed wires sticking out (mostly)

--- a/controls/checkbox/checkbox.css
+++ b/controls/checkbox/checkbox.css
@@ -25,4 +25,5 @@
     width:       auto;
     height:      auto;
     margin-left: 10px;
+    cursor:      default;
 }
